[project]
name = "mednote"
version = "0.1.0"
description = "Clinical documentation agent - converts transcripts to SOAP notes"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.2.0",
    "langchain-anthropic",
    "langchain-openai",
    "langchain-google-genai",
    "langchain-core",
    "langchain",
    "langchain-classic",
    "langchain-qdrant",
    "anthropic>=0.100.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
    "qdrant-client>=1.9.0",
    "sentence-transformers>=5.0.0",
    # transformers>=5 hard-requires torch>=2.4 at runtime (it disables its torch backend
    # below that and then crashes on its own code), but PyPI never shipped an Intel-Mac
    # (macosx_x86_64) wheel for torch past 2.2.2 — so cap transformers on that platform too.
    "transformers>=4.40.0,<5; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers>=4.40.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch>=2.0.0,<2.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torch>=2.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "fastembed>=0.3.0",
    "gradio>=5.0.0",
    "fastapi>=0.130.0",
    "uvicorn",
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "httpx",
    "python-dotenv",
    "lxml",
    "ragas>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.29",
    "ipywidgets>=8.1",
    "notebook>=7.0",
]

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mednote"]
